--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-router-dom": "latest",
     "react-scripts": "3.3.0",
     "styled-components": "^4.4.1",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "i18next": "latest",
+    "react-i18next": "latest",
+    "i18next-browser-languagedetector": "latest"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=8192 start",
