added sitemap, updates

--- a/package.json
+++ b/package.json
@@ -4,34 +4,43 @@
   "private": true,
   "dependencies": {
     "@atlaskit/avatar": "^17.1.5",
-    "@material-ui/core": "^4.8.2",
+    "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.38",
+    "@material-ui/lab": "^4.0.0-alpha.40",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^12.12.24",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.25",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "@types/react-pdf": "^4.0.3",
     "@types/react-router-dom": "^5.1.3",
+    "i18next": "latest",
+    "i18next-browser-languagedetector": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.1",
     "react-pdf": "^4.1.0",
     "react-router-dom": "latest",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "3.3.0",
     "styled-components": "^4.4.1",
-    "typescript": "^3.7.4",
-    "i18next": "latest",
-    "react-i18next": "latest",
-    "i18next-browser-languagedetector": "latest"
+    "typescript": "^3.7.5",
+    "react-router": "latest",
+    "@babel/cli": "latest",
+    "@babel/core": "latest",
+    "@babel/preset-env": "latest",
+    "@babel/preset-react": "latest",
+    "@babel/register": "latest"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=8192 start",
     "build": "react-scripts --max_old_space_size=8192 build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sitemap": "node src/sitemap/sitemap-builder.js",
+    "predeploy": "npm run sitemap"
   },
   "eslintConfig": {
     "extends": "react-app"
