--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@atlaskit/avatar": "^17.1.5",
+    "@babel/cli": "latest",
+    "@babel/core": "latest",
+    "@babel/preset-env": "latest",
+    "@babel/preset-react": "latest",
+    "@babel/register": "latest",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.40",
@@ -20,19 +25,15 @@
     "i18next-browser-languagedetector": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-i18next": "^11.3.1",
     "react-pdf": "^4.1.0",
+    "react-router": "latest",
     "react-router-dom": "latest",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "3.3.0",
     "styled-components": "^4.4.1",
-    "typescript": "^3.7.5",
-    "react-router": "latest",
-    "@babel/cli": "latest",
-    "@babel/core": "latest",
-    "@babel/preset-env": "latest",
-    "@babel/preset-react": "latest",
-    "@babel/register": "latest"
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=8192 start",
