--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "latest",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "3.3.0",
+    "react-visibility-sensor": "^5.1.1",
     "styled-components": "^4.4.1",
     "typescript": "^3.8.3"
   },
