--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "react-ga": "^2.7.0",
     "react-i18next": "^11.3.3",
     "react-pdf": "^4.1.0",
-    "react-router": "latest",
-    "react-router-dom": "latest",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-router-sitemap": "^1.2.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "react-visibility-sensor": "^5.1.1",
-    "styled-components": "^4.4.1",
+    "styled-components": "^5.0.1",
     "typescript": "^3.8.3"
   },
   "scripts": {
