--- a/package.json
+++ b/package.json
@@ -3,38 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@atlaskit/avatar": "^17.1.9",
-    "@babel/cli": "latest",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/register": "^7.9.0",
-    "@material-ui/core": "^4.9.10",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/register": "^7.10.1",
+    "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.49",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.35",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-pdf": "^4.0.3",
-    "@types/react-router-dom": "^5.1.4",
-    "i18next": "^19.4.1",
-    "i18next-browser-languagedetector": "latest",
+    "@material-ui/lab": "^4.0.0-alpha.55",
+    "@types/node": "^12.12.44",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-pdf": "^4.0.5",
+    "@types/react-router-dom": "^5.1.5",
+    "i18next": "^19.4.5",
+    "i18next-browser-languagedetector": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
-    "react-i18next": "^11.3.4",
+    "react-i18next": "^11.5.0",
     "react-pdf": "^4.1.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "^3.4.1",
     "react-visibility-sensor": "^5.1.1",
-    "styled-components": "^5.1.0",
-    "typescript": "^3.8.3"
+    "styled-components": "^5.1.1",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=8192 start",
