--- a/package.json
+++ b/package.json
@@ -6,11 +6,6 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@types/node": "^14.14.34",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-pdf": "^5.0.1",
-    "@types/react-router-dom": "^5.1.7",
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^6.0.1",
     "react": "^17.0.1",
@@ -25,16 +20,24 @@
     "styled-components": "^5.2.1",
     "typescript": "^4.2.3"
   },
+  "devDependencies": {
+    "@types/node": "^14.14.34",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-pdf": "^5.0.1",
+    "@types/react-router-dom": "^5.1.7"
+  },
   "scripts": {
-    "start": "react-scripts --max_old_space_size=8192 start",
-    "build": "react-scripts --max_old_space_size=8192 build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "sitemap": "node src/sitemap/sitemap-builder.js",
-    "predeploy": "npm run sitemap"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
